# did-puf-framework

./: .gitignore  .gitmodules  README.md  benchmark_mldsa87_10k.txt
firmware/components/crypto_storage/: CMakeLists.txt
firmware/components/crypto_storage/include/: aes_cbc.h  api_secure_storage.h  hmac_sha512.h  pkcs_7.h  secure_storage_nvs.h
firmware/components/crypto_storage/src/: aes_cbc.c  api_secure_storage.c  hmac_sha512.c  pkcs_7.c  secure_storage_nvs.c
firmware/components/crypto_utils/: CMakeLists.txt
firmware/components/crypto_utils/include/: base64.h
firmware/components/crypto_utils/src/: base64.c
firmware/components/http_helpers/: CMakeLists.txt
firmware/components/http_helpers/include/: http_transactions.h
firmware/components/http_helpers/src/: http_transactions.c
firmware/components/ml_dsa/: CMakeLists.txt
firmware/components/ml_dsa/config/: mldsa_config_esp32.h
firmware/components/ml_dsa/include/: ml_dsa.h
firmware/components/ml_dsa/src/: mldsa_config_esp32.h
firmware/puf_provisioning/: CMakeLists.txt  partitions.csv
firmware/puf_provisioning/main/: CMakeLists.txt  puf_provisioning.c
firmware/root_of_trust_fw/: CMakeLists.txt  sdkconfig.defaults
firmware/root_of_trust_fw/main/: CMakeLists.txt  main.c
server/cld-service/: README.md
server/test-enrollment/: server.py  verify_signature.py
web/puf-web-flasher/: generate_web_firmware.sh  index.html
web/puf-web-flasher/firmware/: checksums.sha256  manifest.json
web/puf-web-flasher/firmware-functional/: checksums.sha256  manifest.json
